--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "resume",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://nursh.github.io/Resume",
   "dependencies": {
     "@types/jest": "24.0.9",
     "@types/node": "11.10.0",
     "@types/react": "16.8.6",
     "@types/react-dom": "16.8.2",
+    "gh-pages": "^2.0.1",
     "node-sass": "^4.11.0",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
@@ -17,7 +19,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
